vcs/specs/parser/fail/types/unclosed_tuple_type.vr
// @test: parse-fail
// @level: L0
// @tags: parser, types, tuple, brackets, error
// @description: Test detection of unclosed tuple type
// @expected-error: E011

// Tuple type missing closing parenthesis
fn test(x: (Int, Text) {}  // The param parens are actually missing ) before {}
